--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.ibm.com/van-staub/cnx2js.git"
+    "url": "https://github.com/van-ibm/cnx2js.git"
   },
   "keywords": [
     "ibm",
